fix header alignment

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ hr
     padding-bottom: auto;
 }
 
-/* Headshots*/
+/* Headshot */
 img.headshot1 {
     width: 50%;
     border-radius: 50%;
@@ -66,11 +66,11 @@ img.headshot1 {
 }
 
 
-/* Header */
 header {
-    text-align: left;
+    text-align: center;
 }
-  
+
+
 .name {
     font-size: 4.0rem;
     font-family: 'Chunk', 'HelveticaNeue', sans-serif;
